@@ -1,3 +1,11 @@
+2010-07-12  Eli Zaretskii  <eliz@gnu.org>
+
+	* sed1v2.inp (C_WARNINGS_SWITCH, PROFILING_CFLAGS, PROFILING_LDFLAGS):
+	Edit to empty.
+
+	* sed3v2.inp(C_WARNINGS_SWITCH, PROFILING_CFLAGS, PROFILING_LDFLAGS):
+	Edit to empty.
+
 2010-07-11  Eli Zaretskii  <eliz@gnu.org>
 
 	* sed2v2.inp (HAVE_STRCHR, HAVE_STRRCHR): Don't edit, already
